--- a/style.css
+++ b/style.css
@@ -66,3 +66,72 @@
     transform: scale(1.2, 1);
   }
 }
+
+@keyframes showPopup {
+  0% {
+    opacity: 0;
+    width: 400px;
+  }
+  50% {
+    opacity: 0;
+    width: 800px;
+  }
+  100% {
+    opacity: 1;
+    width: 800px;
+  }
+}
+
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: aliceblue #eeeeeea0;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #eeeeeea0;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: aliceblue;
+  border-radius: 20px;
+  border: 3px solid #eeeeeea0;
+}
+
+.main {
+  @apply w-[800px] flex h-[600px] flex-col;
+  animation: showPopup 0.35s ease-in-out;
+}
+
+.main-container {
+  @apply overflow-y-auto overflow-x-hidden;
+}
+
+@keyframes scaleIn {
+  0% {
+    transform: scaleY(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scaleY(1);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scaleY(1);
+    opacity: 1;
+  }
+}
+
+.data-detail {
+  @apply p-4 bg-gray-50 origin-top;
+  animation: scaleIn 0.35s ease-in-out;
+}
+
+.tag-item {
+  @apply flex items-center p-1.5 rounded-md text-white m-3 mr-0 flex-wrap transition-all;
+}
