--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "NotoSansSC-Regular", sans-serif;
+}
+
 .loader {
   width: 32px;
   height: 32px;
@@ -13,7 +17,7 @@
   content: "";
   width: 32px;
   height: 5px;
-  background: #7b57d660;
+  background: #dc475860;
   position: absolute;
   top: 60px;
   left: 0;
@@ -25,7 +29,7 @@
   content: "";
   width: 100%;
   height: 100%;
-  background: #8d6bbd;
+  background: #dc4758;
   position: absolute;
   top: 0;
   left: 0;
@@ -85,7 +89,7 @@
 /* Works on Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: aliceblue #eeeeeea0;
+  scrollbar-color: gray #eeeeeea0;
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -98,7 +102,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: aliceblue;
+  background-color: gray;
   border-radius: 20px;
   border: 3px solid #eeeeeea0;
 }
@@ -128,11 +132,11 @@
 }
 
 .data-detail {
-  @apply p-8 bg-gray-50 origin-top fixed bottom-4 left-0 right-0 top-[80px] overflow-y-auto overflow-x-hidden z-10;
+  @apply p-8 bg-gray-50 origin-top fixed bottom-4 left-0 right-0 top-[80px] overflow-y-auto overflow-x-hidden z-10 flex flex-col gap-8;
   height: calc(100% - 80px);
   animation: scaleIn 0.35s ease-in-out;
 }
 
 .tag-item {
-  @apply flex items-center p-1.5 rounded-md text-white m-3 mr-0 flex-wrap transition-all;
+  @apply flex items-center p-1.5 rounded-md text-white m-3 mr-0 flex-wrap transition-all mb-0;
 }
